--- a/index.html
+++ b/index.html
@@ -1,6 +1,20 @@
 <html>
    <head>
       <script src="http://code.jquery.com/jquery-latest.js"></script>
+      <style type="text/css">
+        .resourceSpace {
+          height: 100px;
+          border: 3px solid black;
+        }
+        .forest {
+          border-color: brown;
+        }
+        .worker-pile {
+          font-weight: bold;
+        }
+        .player-red { color: red; }
+        .player-green { color: green; }
+      </style>
    </head>
    <body>
       <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/require.js/1.0.1/require.min.js"></script>
