Use local jquery and requirejs

--- a/index.html
+++ b/index.html
@@ -1,20 +1,8 @@
 <html>
    <head>
-      <script src="http://code.jquery.com/jquery-latest.js"></script>
       <link rel="stylesheet" type="text/css" href="css/style.css" />
    </head>
    <body>
-      <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/require.js/1.0.1/require.min.js"></script>
-      <script type="text/javascript">
-         require.config({
-            paths: {
-              'underscore': 'lib/underscore'
-            },
-            baseUrl: ".",
-            waitSeconds: 15,
-            urlArgs: "bust=" +  (new Date()).getTime()
-         });
-         require(["src/main"]);
-      </script>
+      <script data-main="src/main" type="text/javascript" src="lib/require-1.0.3.min.js"></script>
    </body>
 </html>
