--- a/test.html
+++ b/test.html
@@ -1,30 +1,21 @@
 <html>
 	<head>
-		<script src="http://code.jquery.com/jquery-latest.js"></script>
-		<script type="text/javascript" src="http://code.jquery.com/qunit/qunit-git.js"></script>
-		<link rel="stylesheet" type="text/css" href="http://code.jquery.com/qunit/qunit-git.css" />
+		<script type="text/javascript" src="lib/qunit.js"></script>
+		<link rel="stylesheet" type="text/css" href="css/qunit.css" />
 	</head>
 	<body>
-		<h1 id="qunit-header">QUnit example</h1>
+		<h1 id="qunit-header">Stone Age Tests</h1>
 		
 		<h2 id="qunit-banner"></h2>
 		<div id="qunit-testrunner-toolbar"></div>
 		
 		<h2 id="qunit-userAgent"></h2>
 		<ol id="qunit-tests"></ol>
-		<div id="qunit-fixture">test markup, will be hidden</div>
+		<div id="qunit-fixture"></div>
 		
-		<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/require.js/1.0.1/require.min.js"></script>
+		<script type="text/javascript" src="lib/require-1.0.3.min.js"></script>
 		<script type="text/javascript">
-			require.config({
-        paths: {
-          'underscore': 'lib/underscore'
-        },
-				baseUrl: ".",
-				waitSeconds: 15,
-				urlArgs: "bust=" +  (new Date()).getTime()
-			});
-			require(["test/main"]);
+      require(["test/main"]);
 		</script>
 	</body>
 </html>
