Use the data-main attribute

--- a/test.html
+++ b/test.html
@@ -13,9 +13,6 @@
 		<ol id="qunit-tests"></ol>
 		<div id="qunit-fixture"></div>
 		
-		<script type="text/javascript" src="lib/require-1.0.3.min.js"></script>
-		<script type="text/javascript">
-      require(["test/main"]);
-		</script>
+		<script data-main="test/main" type="text/javascript" src="lib/require-1.0.3.min.js"></script>
 	</body>
 </html>
