Hide status bar in standalone mode (issue #35)

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
    <head>
-      <link rel="stylesheet" type="text/css" href="css/style.css" />
+     <meta name="apple-mobile-web-app-capable" content="yes" />
+     <link rel="stylesheet" type="text/css" href="css/style.css" />
    </head>
    <body>
      <script data-main="src/main" type="text/javascript" src="lib/require-1.0.3.min.js"></script>
