--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
    <head>
      <meta name="apple-mobile-web-app-capable" content="yes" />
      <link rel="stylesheet" type="text/css" href="css/style.css" />
+     <link rel="apple-touch-icon" href="css/images/stone_age.png" />
    </head>
    <body>
      <script data-main="src/main" type="text/javascript" src="lib/require-1.0.3.min.js"></script>
